# PCMonitor-Hash-Join-Codebase

./: CMakeLists.txt  README.md  aggregate-results.sh  aggregate_results.sh  build.sh  delete-results.sh  plot.sh  push-plots.sh  push-results.sh  run-busy.sh  run.sh  save-results.sh
results/02-10-2023--12:37:25--0/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:37:25--1/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:37:25--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:48:35--1/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:48:35--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:48:35--3/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--12:48:35--4/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--14:54:06--0/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--14:54:06--1/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--14:54:06--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--14:54:06--3/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--16:30:09--0/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--16:30:09--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--16:30:09--3/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/02-10-2023--16:30:09--4/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--14:45:15--0/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--14:45:15--1/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--14:45:15--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--14:45:15--3/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--18:13:47--0/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--18:13:47--1/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--18:13:47--2/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
results/03-10-2023--18:13:47--3/: IPC-results.csv  MB-results.csv  cache-results.csv  individual-thread-results.csv  timing-results.csv
src/: CMakeLists.txt  aggregate-cpu-cycles.py  aggregate-runtimes.py  aggregate-thread-runtimes.py  aggregate_cpu_cycles.py  aggregate_runtimes.py  barrier.h  config.h  cpu_mapping.cpp  cpu_mapping.h  fine_grained_queue.cpp  fine_grained_queue.h  global_hash_table.cpp  global_hash_table.h  join.cpp  join.h  join_params.h  lock.h  main.cpp  main_mem_tracking.py  make_graphs.py  memory_usage.csv  pcm_monitor.cpp  pcm_monitor.h  queue.cpp  queue.h  relation_generator.cpp  relation_generator.h  reorder-results.py  safe_queue.cpp  safe_queue.h  save_results.py  thread_pool.cpp  thread_pool.h  tuple_buffer.h  types.h
(+6626 files in other folders)
